@@ -16,6 +16,7 @@ Date: ????
     - Move quality to the back
     - Rearrange code
     - Check for beacons
+    - Ensure the player is on the 1st floor
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.3
 Date: 2025. 03. 07
